# WattPlan

./: .gitignore  AGENTS.md  README.md  _sample.case.txt  hacs.json  pyproject.toml  requirements-test.txt
.github/workflows/: ci.yml  release.yml
custom_components/wattplan/: __init__.py  button.py  const.py  coordinator.py  datetime_utils.py  entry_setup.py  forecast_provider.py  historical_on_off_provider.py  manifest.json  repairs.py  sensor.py  sensor_specs.py  services.py  services.yaml  source_pipeline.py  source_provider.py  source_types.py  strings.json  target_runtime.py  test_plan_invariants.py
custom_components/wattplan/coordinator_logic/: planning.py  projection.py
custom_components/wattplan/coordinator_parts/: __init__.py  snapshot.py  state.py
custom_components/wattplan/flows/: __init__.py  forms.py  persistence.py  state.py  (+1 more)
docs/: architecture.md  development.md  entities-and-services.md  error-handling.md  example-deye-solcast-stromligning.md  extras.md  optimizer-api.md  optimizer-profiles.md  release.md  source-data.md
scripts/: build_hacs_zip.py  convert_from_eos_request.py  run_tests.sh
src/custom_components/: __init__.py
tests/: __init__.py  common.py  test_build_hacs_zip.py
tests/integration/: __init__.py  conftest.py  test_config_flow.py  test_forecast_provider.py  test_historical_on_off_provider.py  test_integration_e2e.py  test_integration_runtime.py  test_source_fixup.py  test_source_fixup_reuse.py  test_source_flow_modifiers.py  test_source_issues.py  test_source_provider.py
tests/optimizer/: test_optimizer_scenarios.py
(+61 files in other folders)
